# someip-test

./: .bazelrc  BUILD.bazel  CLAUDE.md  README.md  WORKSPACE.bazel
config/01_request_response/: client.json  service.json
config/02_event/: client.json  service.json
config/03_field/: client.json  service.json
config/04_multi_client_sd/: client1.json  client2.json  service.json
docs/: 01_concepts.md  02_json_config.md  03_service_discovery.md  04_faq.md
examples/01_request_response/: BUILD.bazel  README.md  client.cpp  service.cpp
examples/02_event/: BUILD.bazel  README.md  client.cpp  service.cpp
examples/03_field/: BUILD.bazel  README.md  client.cpp  service.cpp
examples/04_multi_client_sd/: BUILD.bazel  README.md  client1.cpp  client2.cpp  service.cpp
scripts/: install_vsomeip.sh  run.sh
